More URL -> URI refactoring