@@ -21,7 +21,8 @@ import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URLConnection;
 import java.security.KeyStore;
 import java.security.cert.Certificate;
@@ -77,7 +78,13 @@ public abstract class AbstractStreamProvider implements StreamProvider {
             log.debug(String.format("%s opening connection: url [%s], headers [%s], connectTimeout [%s], readTimeout [%s]",
                     getClass().getSimpleName(), url, headers, Integer.toString(connectTimeout), Integer.toString(readTimeout)));
         }
-        URLConnection connection = new URL(url).openConnection();
+        URLConnection connection;
+        try {
+            connection = new URI(url).toURL().openConnection();
+        } catch (URISyntaxException e) {
+            // Not ideal but consistent with API
+            throw new IOException(e);
+        }
         if (headers != null) {
             for (Map.Entry<String, String> entry : headers.entrySet()) {
                 connection.addRequestProperty(entry.getKey(), entry.getValue());
